# 12PoolBot

./: .gitignore  .gitmodules  Makefile  README.md  pyproject.toml  run.py  zerg_builds.yml
.github/workflows/: build_test_and_upload.yml  build_test_upload.yml  ladder_zip.yml
bot/: __init__.py  action.py  combat_predictor.py  consts.py  main.py  overlord_drop.py  tags.py
bot/components/: macro.py  micro.py  strategy.py
data/: None-zerg.json
scripts/: create_ladder_zip.py  run_test_game.py  update_ares.py  upload_to_ai_arena.py
