[project]
name = "12PoolBot"
version = "1.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "cython-extensions-sc2>=0.13.4",
    "leitwerk @ git+https://github.com/phantomsc2/leitwerk.git",
    "scikit-image>=0.23.2,<0.24.0",
]

[tool.poetry]
packages = [{include = "ares-sc2/src/ares"}]

[tool.poetry.dependencies]
ares-sc2 = { path = "ares-sc2", develop = false }

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
mypy = ">=1.10,<2.0"
requests = "^2.32.3"
ruff = ">=0.11,<1.0"
scipy-stubs = "^1.17.1.2"
snakeviz = "^2.2.0"
types-requests = "^2.32.4.20260107"
types-pyyaml = "^6.0.12.20250915"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["bot", "scripts"]
extend-exclude = ["ares-sc2", "build", "notebooks", "resources"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
files = ["bot", "scripts", "run.py", "ladder.py"]
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
strict_equality = true
no_implicit_optional = true
ignore_missing_imports = true
exclude = "(^ares-sc2/|^build/|^notebooks/|^resources/)"

[[tool.mypy.overrides]]
module = [
    "ares.*",
    "sc2.*",
    "scipy.*",
    "sklearn.*",
    "cython_extensions.*",
]
ignore_missing_imports = true
